--- a/styles/styles.css
+++ b/styles/styles.css
@@ -111,3 +111,105 @@ vertical-align: top;
  font-weight: 200;
  font-size: 18px;
 }
+
+/* gradient image */
+#show_bg {
+  background-image: url(../images/watch.png);
+  width: 100%;
+  height: 250px;
+  background-size: cover;
+  color: white;
+
+}
+  
+.watch-text{
+  color: black;
+  width: 400px;
+  font-weight: 800;
+  font-size: 35px;
+  padding-top: 40px;
+  padding-left: 100px;
+  text-align: left;
+}
+.call-button{
+border-radius: 3px;
+border: none;
+height: 50px;
+width: 120px;
+background-color: rgb(255, 255, 255);
+font-weight: 700;
+font-size: 18px;
+vertical-align: top;
+margin-left: 104px;
+margin-bottom: 80px;
+
+
+}
+/* footer info */
+
+.contact{
+  display: flex;
+  gap: 500px;
+  color: white;
+  background-color: black;
+  border-radius: none;
+  width: 100%;
+  height: 400px;
+  margin-top: 130px;
+  padding-left: 150px;
+  padding-top: 80px;
+  
+}
+.contact-info{
+  display: flex;
+  flex-direction: column;
+}
+.contact-info .text-style{
+  
+  left: 150px;
+  font-weight: 600;
+  font-size: 25px;
+}
+.contact-info .enter-mail{
+  font-weight: 400;
+  font-size: 18px;
+  text-align: center;
+  border:1 px solid;
+  border-color: white;
+  background-color: black;
+  position: absolute;
+  width: 325px;
+  height: 40px;
+  left: 1060px;
+  top: 2900px;
+  border-radius: 7px;
+  
+}
+.contact-info .sub-button{
+  border-radius: 8px;
+  position: absolute;
+  width: 150px;
+  height: 50px;
+  left: 1060px;
+  top: 2960.3px;
+  font-weight: 600;
+  font-size: 20px;
+  color: #F15B22;
+ 
+}
+
+.contact-description{
+  width: 400px;
+  
+}
+
+.email-name{
+  border: none;
+  border-radius: 3px;
+ 
+}
+
+  
+
+
+
