--- a/styles/styles.css
+++ b/styles/styles.css
@@ -44,6 +44,45 @@ text-align: right;
   
 
 }
+/* middle-part */
+.body-part{
+  padding-bottom: 100px;
+}
+.person-image{
+padding-top: 150px;
+padding-left: 100px;
+  
+}
+.body-title{
+position: absolute;
+color:#151414;
+width: 288px;
+height: 94px;
+left: 862px;
+top: 1178px;
+font-weight: 800;
+font-size: 40px;
+line-height: 47px;
+
+}
+.body-description{
+  position: absolute;
+  color: #444343;;
+  width: 416px;
+  height:104px ;
+  top: 1310px;
+  left: 860px;
+  font-weight: 400;
+font-size: 16px;
+line-height: 26px;
+}
+.body-text-point{
+  position: absolute;
+width: 349px;
+height: 162px;
+left: 862px;
+top: 1410px;
+}
 /* plan */
 
 .plan{
